6870843: G1: G1 GC memory leak

The fix addresses two memory leaks in G1 code: (1) _evac_failure_scan_stack - a resource object allocated on the C heap was not freed; (2) RSHashTable were linked into deleted list which was only cleared at full GC.

Reviewed-by: tonyp, iveresov